--- a/catmeoowwProjects.html
+++ b/catmeoowwProjects.html
@@ -33,80 +33,93 @@
                 <hr>
                 <div id="showingProjects">
                         <center>
-                                <div id="p-webspace" class="CatProjects" title="WebSpaces">
+                                <div id="p-webspace" class="CatProjects" title="WebSpaces"
+                                        onmouseenter="bright(this.id)" onmouseleave="unbright(this.id)">
                                         <img onclick="redirect(1)" src="./otherSites/HexSpaceBg.png">
                                         <button onclick="about(1)">About</button>
                                         <button onclick="redirect(1)">Access</button>
                                         <p id="abt1">WebSpaces</p>
                                 </div>
-                                <div id="p-craftyhub" class="CatProjects" title="Crafty Hub">
+                                <div id="p-craftyhub" class="CatProjects" title="Crafty Hub"
+                                        onmouseenter="bright(this.id)" onmouseleave="unbright(this.id)">
                                         <img onclick="redirect(2)" src="./otherSites/CraftyForums.png">
                                         <button onclick="about(2)">About</button>
                                         <button onclick="redirect(2)">Access</button>
                                         <p id="abt2">Crafty Hub</p>
                                 </div>
-                                <div id="p-mclist" class="CatProjects" title="Minecraft Listing">
+                                <div id="p-mclist" class="CatProjects" title="Minecraft Listing"
+                                        onmouseenter="bright(this.id)" onmouseleave="unbright(this.id)">
                                         <img onclick="redirect(3)" src="./otherSites/Minecraft Listing Background.jpg">
                                         <button onclick="about(3)">About</button>
                                         <button onclick="redirect(3)">Access</button>
                                         <p id="abt3">Minecraft Listing</p>
                                 </div>
-                                <div id="p-gamecord" class="CatProjects" title="GameCord">
+                                <div id="p-gamecord" class="CatProjects" title="GameCord" onmouseenter="bright(this.id)"
+                                        onmouseleave="unbright(this.id)">
                                         <img onclick="redirect(4)" src="./otherSites/GameCordBg.png">
                                         <button onclick="about(4)">About</button>
                                         <button onclick="redirect(4)">Access</button>
                                         <p id="abt4">GameCord</p>
                                 </div>
-                                <div id="p-mccommunity" class="CatProjects" title="Minecraft World Community">
+                                <div id="p-mccommunity" class="CatProjects" title="Minecraft World Community"
+                                        onmouseenter="bright(this.id)" onmouseleave="unbright(this.id)">
                                         <img onclick="redirect(5)"
                                                 src="./otherSites/Minecraft Community Background.jpg">
                                         <button onclick="about(5)">About</button>
                                         <button onclick="redirect(5)">Access</button>
                                         <p id="abt5">Minecraft World Community</p>
                                 </div>
-                                <div id="p-mcbuilders" class="CatProjects" title="Minecraft Builders Blog">
+                                <div id="p-mcbuilders" class="CatProjects" title="Minecraft Builders Blog"
+                                        onmouseenter="bright(this.id)" onmouseleave="unbright(this.id)">
                                         <img onclick="redirect(6)" src="./otherSites/BuildersBlog Background.png">
                                         <button onclick="about(6)">About</button>
                                         <button onclick="redirect(6)">Access</button>
                                         <p id="abt6">Minecraft Builders Blog</p>
                                 </div>
-                                <div id="p-indexdev" class="CatProjects" title="Index Dev">
+                                <div id="p-indexdev" class="CatProjects" title="Index Dev"
+                                        onmouseenter="bright(this.id)" onmouseleave="unbright(this.id)">
                                         <img onclick="redirect(7)" src="./otherSites/IndexDevBg.png">
                                         <button onclick="about(7)">About</button>
                                         <button onclick="redirect(7)">Access</button>
                                         <p id="abt7">Index Dev</p>
                                 </div>
-                                <div id="p-mcutilities" class="CatProjects" title="Minecraft Utilities">
+                                <div id="p-mcutilities" class="CatProjects" title="Minecraft Utilities"
+                                        onmouseenter="bright(this.id)" onmouseleave="unbright(this.id)">
                                         <img onclick="redirect(8)" src="./otherSites/MC-Utilities_bg.jpg">
                                         <button onclick="about(8)">About</button>
                                         <button onclick="redirect(8)">Access</button>
                                         <p id="abt8">Minecraft Utilities</p>
                                 </div>
-                                <div id="p-mcworldnews" class="CatProjects" title="Minecraft World News">
+                                <div id="p-mcworldnews" class="CatProjects" title="Minecraft World News"
+                                        onmouseenter="bright(this.id)" onmouseleave="unbright(this.id)">
                                         <img onclick="redirect(9)" src="./otherSites/Minecraft World Background.png">
                                         <button onclick="about(9)">About</button>
                                         <button onclick="redirect(9)">Access</button>
                                         <p id="abt9">Minecraft World News</p>
                                 </div>
-                                <div id="p-mcpedia" class="CatProjects" title="Minecraftpédia">
+                                <div id="p-mcpedia" class="CatProjects" title="Minecraftpédia"
+                                        onmouseenter="bright(this.id)" onmouseleave="unbright(this.id)">
                                         <img onclick="redirect(10)" src="./otherSites/Minecraftpedia Background.jpg">
                                         <button onclick="about(10)">About</button>
                                         <button onclick="redirect(10)">Access</button>
                                         <p id="abt10">MinecraftPedia</p>
                                 </div>
-                                <div id="p-mcfilter" class="CatProjects" title="Minecraft Filter">
+                                <div id="p-mcfilter" class="CatProjects" title="Minecraft Filter"
+                                        onmouseenter="bright(this.id)" onmouseleave="unbright(this.id)">
                                         <img onclick="redirect(11)" src="./otherSites/Mobs.png">
                                         <button onclick="about(11)">About</button>
                                         <button onclick="redirect(11)">Access</button>
                                         <p id="abt11">Minecraft Filter</p>
                                 </div>
-                                <div id="p-mcia" class="CatProjects" title="Minecraft AI">
+                                <div id="p-mcia" class="CatProjects" title="Minecraft AI" onmouseenter="bright(this.id)"
+                                        onmouseleave="unbright(this.id)">
                                         <img onclick="redirect(12)" src="./otherSites/aicraft_bg.png">
                                         <button onclick="about(12)">About</button>
                                         <button onclick="redirect(12)">Access</button>
                                         <p id="abt12">Minecraft with AI</p>
                                 </div>
-                                <div id="p-more" class="CatProjects" title="more">
+                                <div id="p-more" class="CatProjects" title="more" onmouseenter="bright(this.id)"
+                                        onmouseleave="unbright(this.id)">
                                         <label style="color: white;text-shadow: 2px 2px 2px green;">More Stuff
                                                 Coming!<br>Access games page for more</label>
                                 </div>
@@ -199,6 +212,21 @@
                         b = Math.floor(Math.random() * 230) + 25;
                         document.getElementById("catlabel").style.color = "rgb(" + r + "," + g + "," + b + ")";
                         document.getElementById("cattitle").style.color = "rgb(" + r + "," + g + "," + b + ")";
+                        r = Math.floor(Math.random() * 255);
+                        g = Math.floor(Math.random() * 255);
+                        b = Math.floor(Math.random() * 255);
+                        document.getElementById("cattitle").style.textShadow = "2px 2px 2px rgb(" + r + "," + g + "," + b + ")";
+                }
+
+                function bright(id) {
+                        r = Math.floor(Math.random() * 255);
+                        g = Math.floor(Math.random() * 255);
+                        b = Math.floor(Math.random() * 255);
+                        document.getElementById(id).style.boxShadow = "2px 2px 2px rgb(" + r + "," + g + "," + b + ")";
+                }
+
+                function unbright(id) {
+                        document.getElementById(id).style.boxShadow = "0px 0px 0px black";
                 }
 
                 function showGames() {
